renamed 'products' as 'shop' in navbar and updated links and image file pathways

--- a/index.html
+++ b/index.html
@@ -64,22 +64,22 @@
                 data-toggle="dropdown"
                 aria-expanded="false"
               >
-                Products
+                Shop
               </a>
               <div class="dropdown-menu">
-                <a class="dropdown-item" href="products.html#fruit">Fruit</a>
+                <a class="dropdown-item" href="shop.html#fruit">Fruit</a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="products.html#vegetables"
+                <a class="dropdown-item" href="shop.html#vegetables"
                   >Vegetables</a
                 >
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="products.html#bread">Bread</a>
+                <a class="dropdown-item" href="shop.html#bread">Bread</a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="products.html#cakes">Cakes</a>
+                <a class="dropdown-item" href="shop.html#cakes">Cakes</a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="products.html#pasta">Pasta</a>
+                <a class="dropdown-item" href="shop.html#pasta">Pasta</a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="products.html#cheese">Cheese</a>
+                <a class="dropdown-item" href="shop.html#cheese">Cheese</a>
               </div>
             </li>
           </ul>
