--- a/shop.html
+++ b/shop.html
@@ -63,7 +63,7 @@
                 data-toggle="dropdown"
                 aria-expanded="false"
               >
-                Products
+                Shop
               </a>
               <div class="dropdown-menu">
                 <a class="dropdown-item" href="#fruit">Fruit</a>
@@ -102,7 +102,7 @@
       <div class="product_category">
         <div class="card text-center">
           <img
-            src="img\products_page\javier-balseiro-jNi2SefV6bc-unsplash.jpg"
+            src="img\shop_page\javier-balseiro-jNi2SefV6bc-unsplash.jpg"
             class="card-img-top"
             alt="A pile of red apples"
           />
@@ -125,7 +125,7 @@
         <!--Product card-->
         <div class="card text-center">
           <img
-            src="img\products_page\jonathan-mast-RW6Wz9QaoKk-unsplash.jpg"
+            src="img\shop_page\jonathan-mast-RW6Wz9QaoKk-unsplash.jpg"
             class="card-img-top"
             alt="Boxes of green pears"
           />
@@ -148,7 +148,7 @@
         <!--Product card-->
         <div class="card text-center">
           <img
-            src="img\products_page\ava-tyler-6BjP8AN7PBc-unsplash.jpg"
+            src="img\shop_page\ava-tyler-6BjP8AN7PBc-unsplash.jpg"
             class="card-img-top"
             alt="Peaches"
           />
@@ -171,7 +171,7 @@
         <!--Product card-->
         <div class="card text-center">
           <img
-            src="img\products_page\joanna-kosinska-_xN7UbcZ33I-unsplash.jpg"
+            src="img\shop_page\joanna-kosinska-_xN7UbcZ33I-unsplash.jpg"
             class="card-img-top"
             alt="A pile of cherries"
           />
@@ -194,7 +194,7 @@
         <!--Product card-->
         <div class="card text-center">
           <img
-            src="img\products_page\nick-sarro-qydnkODHMo4-unsplash.jpg"
+            src="img\shop_page\nick-sarro-qydnkODHMo4-unsplash.jpg"
             class="card-img-top"
             alt="Basket of blackberries"
           />
@@ -225,7 +225,7 @@
       <div class="product_category">
         <div class="card text-center">
           <img
-            src="img\products_page\keenan-sultanik-oxXUePN3u4Q-unsplash.jpg"
+            src="img\shop_page\keenan-sultanik-oxXUePN3u4Q-unsplash.jpg"
             class="card-img-top"
             alt="A small pumpkn"
           />
@@ -248,7 +248,7 @@
         <!--Product card-->
         <div class="card text-center">
           <img
-            src="img\products_page\gabriel-gurrola-fcgPRZmTM5w-unsplash.jpg"
+            src="img\shop_page\gabriel-gurrola-fcgPRZmTM5w-unsplash.jpg"
             class="card-img-top"
             alt="A bunch of carrots"
           />
@@ -271,7 +271,7 @@
         <!--Product card-->
         <div class="card text-center">
           <img
-            src="C:\Users\cprie\CFGWebDev\CFGProject\img\products_page\tyrrell-fitness-and-nutrition-jSQxj-Ug0H8-unsplash.jpg"
+            src="img\shop_page\tyrrell-fitness-and-nutrition-jSQxj-Ug0H8-unsplash.jpg"
             class="card-img-top"
             alt="A bowl of broccoli florets"
           />
@@ -294,7 +294,7 @@
         <!--Product card-->
         <div class="card text-center">
           <img
-            src="img\products_page\waldemar-brandt-Ql9oYxramg0-unsplash.jpg"
+            src="img\shop_page\waldemar-brandt-Ql9oYxramg0-unsplash.jpg"
             class="card-img-top"
             alt="Pile of button mushrooms"
           />
@@ -317,7 +317,7 @@
         <!--Product card-->
         <div class="card text-center">
           <img
-            src="img\products_page\emma-jane-hobden-lFxgx7Snyfw-unsplash.jpg"
+            src="img\shop_page\emma-jane-hobden-lFxgx7Snyfw-unsplash.jpg"
             class="card-img-top"
             alt="Four whole beetroot with stalks and leaves"
           />
