adjust padding between product categories so that dropdown links work

--- a/shop.html
+++ b/shop.html
@@ -95,8 +95,9 @@
       </nav>
       <!--End of navbar-->
     </header>
+    <div class="space" id="fruit"></div>
     <!--Product category-->
-    <section id="fruit">
+    <section>
       <h4 id="category_title">Fruit</h4>
       <!--Product card-->
       <div class="product_category">
@@ -217,9 +218,9 @@
       </div>
     </section>
     <!--End of product category-->
-    <div id="space"></div>
+    <div class="space" id="vegetables"></div>
     <!--Product category-->
-    <section id="vegetables">
+    <section>
       <h4 id="category_title">Vegetables</h4>
       <!--Product card-->
       <div class="product_category">
@@ -340,9 +341,9 @@
       </div>
     </section>
     <!--End of product category-->
-    <div id="space"></div>
+    <div class="space" id="bread"></div>
     <!--Product category-->
-    <section id="bread">
+    <section>
       <h4 id="category_title">Bread</h4>
       <!--Product card-->
       <div class="product_category">
@@ -443,9 +444,9 @@
       </div>
     </section>
     <!--End of product category-->
-    <div id="space"></div>
+    <div class="space" id="cakes"></div>
     <!--Product category-->
-    <section id="cakes">
+    <section>
       <h4 id="category_title">Cakes</h4>
       <!--Product card-->
       <div class="product_category">
@@ -546,9 +547,9 @@
       </div>
     </section>
     <!--End of product category-->
-    <div id="space"></div>
+    <div class="space" id="pasta"></div>
     <!--Product category-->
-    <section id="pasta">
+    <section>
       <h4 id="category_title">Pasta</h4>
       <!--Product card-->
       <div class="product_category">
@@ -649,9 +650,9 @@
       </div>
     </section>
     <!--End of product category-->
-    <div id="space"></div>
+    <div class="space" id="cheese"></div>
     <!--Product category-->
-    <section id="cheese">
+    <section>
       <h4 id="category_title">Cheese</h4>
       <!--Product card-->
       <div class="product_category">
