adjust colour and padding of 'add to cart' buttons and remove links

--- a/shop.html
+++ b/shop.html
@@ -120,7 +120,7 @@
               <option value="5">5</option>
             </select>
             <!--Box ends-->
-            <a href="#" class="btn btn-primary">Add to cart</a>
+            <a class="btn">Add to cart</a>
           </div>
         </div>
         <!--Product card-->
@@ -143,7 +143,7 @@
               <option value="5">5</option>
             </select>
             <!--Box ends-->
-            <a href="#" class="btn btn-primary">Add to cart</a>
+            <a class="btn">Add to cart</a>
           </div>
         </div>
         <!--Product card-->
@@ -166,7 +166,7 @@
               <option value="5">5</option>
             </select>
             <!--Box ends-->
-            <a href="#" class="btn btn-primary">Add to cart</a>
+            <a class="btn">Add to cart</a>
           </div>
         </div>
         <!--Product card-->
@@ -189,7 +189,7 @@
               <option value="5">5</option>
             </select>
             <!--Box ends-->
-            <a href="#" class="btn btn-primary">Add to cart</a>
+            <a class="btn">Add to cart</a>
           </div>
         </div>
         <!--Product card-->
@@ -212,7 +212,7 @@
               <option value="5">5</option>
             </select>
             <!--Box ends-->
-            <a href="#" class="btn btn-primary">Add to cart</a>
+            <a class="btn">Add to cart</a>
           </div>
         </div>
       </div>
@@ -243,7 +243,7 @@
               <option value="5">5</option>
             </select>
             <!--Box ends-->
-            <a href="#" class="btn btn-primary">Add to cart</a>
+            <a class="btn">Add to cart</a>
           </div>
         </div>
         <!--Product card-->
@@ -266,7 +266,7 @@
               <option value="5">5</option>
             </select>
             <!--Box ends-->
-            <a href="#" class="btn btn-primary">Add to cart</a>
+            <a class="btn">Add to cart</a>
           </div>
         </div>
         <!--Product card-->
@@ -289,7 +289,7 @@
               <option value="5">5</option>
             </select>
             <!--Box ends-->
-            <a href="#" class="btn btn-primary">Add to cart</a>
+            <a class="btn">Add to cart</a>
           </div>
         </div>
         <!--Product card-->
@@ -312,7 +312,7 @@
               <option value="5">5</option>
             </select>
             <!--Box ends-->
-            <a href="#" class="btn btn-primary">Add to cart</a>
+            <a class="btn">Add to cart</a>
           </div>
         </div>
         <!--Product card-->
@@ -335,7 +335,7 @@
               <option value="5">5</option>
             </select>
             <!--Box ends-->
-            <a href="#" class="btn btn-primary">Add to cart</a>
+            <a class="btn">Add to cart</a>
           </div>
         </div>
       </div>
@@ -362,7 +362,7 @@
               <option value="5">5</option>
             </select>
             <!--Box ends-->
-            <a href="#" class="btn btn-primary">Add to cart</a>
+            <a class="btn">Add to cart</a>
           </div>
         </div>
         <!--Product card-->
@@ -381,7 +381,7 @@
               <option value="5">5</option>
             </select>
             <!--Box ends-->
-            <a href="#" class="btn btn-primary">Add to cart</a>
+            <a class="btn">Add to cart</a>
           </div>
         </div>
         <!--Product card-->
@@ -400,7 +400,7 @@
               <option value="5">5</option>
             </select>
             <!--Box ends-->
-            <a href="#" class="btn btn-primary">Add to cart</a>
+            <a class="btn">Add to cart</a>
           </div>
         </div>
         <!--Product card-->
@@ -419,7 +419,7 @@
               <option value="5">5</option>
             </select>
             <!--Box ends-->
-            <a href="#" class="btn btn-primary">Add to cart</a>
+            <a class="btn">Add to cart</a>
           </div>
         </div>
         <!--Product card-->
@@ -438,7 +438,7 @@
               <option value="5">5</option>
             </select>
             <!--Box ends-->
-            <a href="#" class="btn btn-primary">GAdd to cart</a>
+            <a class="btn">GAdd to cart</a>
           </div>
         </div>
       </div>
@@ -465,7 +465,7 @@
               <option value="5">5</option>
             </select>
             <!--Box ends-->
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <a class="btn">Go somewhere</a>
           </div>
         </div>
         <!--Product card-->
@@ -484,7 +484,7 @@
               <option value="5">5</option>
             </select>
             <!--Box ends-->
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <a class="btn">Go somewhere</a>
           </div>
         </div>
         <!--Product card-->
@@ -503,7 +503,7 @@
               <option value="5">5</option>
             </select>
             <!--Box ends-->
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <a class="btn">Go somewhere</a>
           </div>
         </div>
         <!--Product card-->
@@ -522,7 +522,7 @@
               <option value="5">5</option>
             </select>
             <!--Box ends-->
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <a class="btn">Go somewhere</a>
           </div>
         </div>
         <!--Product card-->
@@ -541,7 +541,7 @@
               <option value="5">5</option>
             </select>
             <!--Box ends-->
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <a class="btn">Go somewhere</a>
           </div>
         </div>
       </div>
@@ -568,7 +568,7 @@
               <option value="5">5</option>
             </select>
             <!--Box ends-->
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <a class="btn">Go somewhere</a>
           </div>
         </div>
         <!--Product card-->
@@ -587,7 +587,7 @@
               <option value="5">5</option>
             </select>
             <!--Box ends-->
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <a class="btn">Go somewhere</a>
           </div>
         </div>
         <!--Product card-->
@@ -606,7 +606,7 @@
               <option value="5">5</option>
             </select>
             <!--Box ends-->
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <a class="btn">Go somewhere</a>
           </div>
         </div>
         <!--Product card-->
@@ -625,7 +625,7 @@
               <option value="5">5</option>
             </select>
             <!--Box ends-->
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <a class="btn">Go somewhere</a>
           </div>
         </div>
         <!--Product card-->
@@ -644,7 +644,7 @@
               <option value="5">5</option>
             </select>
             <!--Box ends-->
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <a class="btn">Go somewhere</a>
           </div>
         </div>
       </div>
@@ -671,7 +671,7 @@
               <option value="5">5</option>
             </select>
             <!--Box ends-->
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <a class="btn">Go somewhere</a>
           </div>
         </div>
         <!--Product card-->
@@ -690,7 +690,7 @@
               <option value="5">5</option>
             </select>
             <!--Box ends-->
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <a class="btn">Go somewhere</a>
           </div>
         </div>
         <!--Product card-->
@@ -709,7 +709,7 @@
               <option value="5">5</option>
             </select>
             <!--Box ends-->
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <a class="btn">Go somewhere</a>
           </div>
         </div>
         <!--Product card-->
@@ -728,7 +728,7 @@
               <option value="5">5</option>
             </select>
             <!--Box ends-->
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <a class="btn">Go somewhere</a>
           </div>
         </div>
         <!--Product card-->
@@ -747,7 +747,7 @@
               <option value="5">5</option>
             </select>
             <!--Box ends-->
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <a class="btn">Go somewhere</a>
           </div>
         </div>
       </div>
