add content to product cards in bread section

--- a/shop.html
+++ b/shop.html
@@ -350,10 +350,14 @@
         <!--Product card-->
         <div class="product_category">
           <div class="card text-center">
-            <img src="..." class="card-img-top" alt="..." />
+            <img
+              src="img\shop_page\jude-infantini-rYOqbTcGp1c-unsplash (1).jpg"
+              class="card-img-top"
+              alt="Partially sliced loaf of wholemeal bread"
+            />
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">example text</p>
+              <h5 class="card-title">Wholemeal Loaf</h5>
+              <p class="card-text">TBC each</p>
               <!--Quantity dropdown box-->
               <label for="quantity">Quantity:</label>
               <select name="quantity" class="quantity">
@@ -369,10 +373,14 @@
           </div>
           <!--Product card-->
           <div class="card text-center">
-            <img src="..." class="card-img-top" alt="..." />
+            <img
+              src="img\shop_page\tommaso-urli-hzScL4ufC6k-unsplash.jpg"
+              class="card-img-top"
+              alt="French loaf"
+            />
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">example text</p>
+              <h5 class="card-title">French Loaf</h5>
+              <p class="card-text">TBC each</p>
               <!--Quantity dropdown box-->
               <label for="quantity">Quantity:</label>
               <select name="quantity" class="quantity">
@@ -388,10 +396,14 @@
           </div>
           <!--Product card-->
           <div class="card text-center">
-            <img src="..." class="card-img-top" alt="..." />
+            <img
+              src="img\shop_page\wesual-click-oTL8LXLhUPI-unsplash.jpg"
+              class="card-img-top"
+              alt="Three seeded bread rolls on a wooden bread board"
+            />
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">example text</p>
+              <h5 class="card-title">Seeded Rolls</h5>
+              <p class="card-text">TBC each</p>
               <!--Quantity dropdown box-->
               <label for="quantity">Quantity:</label>
               <select name="quantity" class="quantity">
@@ -407,10 +419,14 @@
           </div>
           <!--Product card-->
           <div class="card text-center">
-            <img src="..." class="card-img-top" alt="..." />
+            <img
+              src="img\shop_page\ryan-darin-viqQ-eDLRVI-unsplash.jpg"
+              class="card-img-top"
+              alt="Four seeded bagels on a wire rack"
+            />
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">example text</p>
+              <h5 class="card-title">Bagels</h5>
+              <p class="card-text">TBC each</p>
               <!--Quantity dropdown box-->
               <label for="quantity">Quantity:</label>
               <select name="quantity" class="quantity">
@@ -426,10 +442,14 @@
           </div>
           <!--Product card-->
           <div class="card text-center">
-            <img src="..." class="card-img-top" alt="..." />
+            <img
+              src="img\shop_page\spring-fed-images-638u4VmioHs-unsplash.jpg"
+              class="card-img-top"
+              alt="Sourdough loaf"
+            />
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">example text</p>
+              <h5 class="card-title">Sourdough Loaf</h5>
+              <p class="card-text">TBC each</p>
               <!--Quantity dropdown box-->
               <label for="quantity">Quantity:</label>
               <select name="quantity" class="quantity">
@@ -440,7 +460,7 @@
                 <option value="5">5</option>
               </select>
               <!--Box ends-->
-              <a class="btn">GAdd to cart</a>
+              <a class="btn">Add to cart</a>
             </div>
           </div>
         </div>
