edit prices in bread section

--- a/shop.html
+++ b/shop.html
@@ -357,7 +357,7 @@
             />
             <div class="card-body">
               <h5 class="card-title">Wholemeal Loaf</h5>
-              <p class="card-text">TBC each</p>
+              <p class="card-text">£1.50 each</p>
               <!--Quantity dropdown box-->
               <label for="quantity">Quantity:</label>
               <select name="quantity" class="quantity">
@@ -380,7 +380,7 @@
             />
             <div class="card-body">
               <h5 class="card-title">French Loaf</h5>
-              <p class="card-text">TBC each</p>
+              <p class="card-text">£1.75 each</p>
               <!--Quantity dropdown box-->
               <label for="quantity">Quantity:</label>
               <select name="quantity" class="quantity">
@@ -403,7 +403,7 @@
             />
             <div class="card-body">
               <h5 class="card-title">Seeded Rolls</h5>
-              <p class="card-text">TBC each</p>
+              <p class="card-text">50p each</p>
               <!--Quantity dropdown box-->
               <label for="quantity">Quantity:</label>
               <select name="quantity" class="quantity">
@@ -426,7 +426,7 @@
             />
             <div class="card-body">
               <h5 class="card-title">Bagels</h5>
-              <p class="card-text">TBC each</p>
+              <p class="card-text">50p each</p>
               <!--Quantity dropdown box-->
               <label for="quantity">Quantity:</label>
               <select name="quantity" class="quantity">
@@ -449,7 +449,7 @@
             />
             <div class="card-body">
               <h5 class="card-title">Sourdough Loaf</h5>
-              <p class="card-text">TBC each</p>
+              <p class="card-text">£2.00 each</p>
               <!--Quantity dropdown box-->
               <label for="quantity">Quantity:</label>
               <select name="quantity" class="quantity">
