--- a/index.html
+++ b/index.html
@@ -176,14 +176,15 @@
       <!--Mailing list-->
       <div id="form_container">
         <form id="mailing_list">
-          <label>Join our mailing list:</label><br />
+          <label onmouseover="discountAlert()">Join our mailing list:</label
+          ><br />
           <input
             type="text"
             id="email"
             name="email"
             placeholder="Email address"
           />
-          <button id="mailing_submit">Submit</button>
+          <button id="mailing_submit" onclick="emailAlert()">Submit</button>
         </form>
       </div>
     </main>
