adjust shop page background and borders

--- a/shop.html
+++ b/shop.html
@@ -99,7 +99,7 @@
     <div id="products">
       <div class="space" id="fruit"></div>
       <!--Product category-->
-      <section>
+      <section id="top_section">
         <h4 id="category_title">Fruit</h4>
         <!--Product card-->
         <div class="product_category">
@@ -777,6 +777,20 @@
       <!--End of product category-->
     </div>
     <!--End of products-->
+    <!--Social media links-->
+    <footer id="landing_footer">
+      <div id="social_media">
+        <a href="https://twitter.com/?lang=en-gb"
+          ><i class="fa-brands fa-square-twitter"></i
+        ></a>
+        <a href="https://en-gb.facebook.com/"
+          ><i class="fa-brands fa-square-facebook"></i
+        ></a>
+        <a href="https://www.instagram.com/"
+          ><i class="fa-brands fa-instagram"></i
+        ></a>
+      </div>
+    </footer>
     <!--Bootstrap JavaScript link-->
     <script
       src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
