add product card content and product images shared by Iuliia Ustkachkintseva with her permission

--- a/shop.html
+++ b/shop.html
@@ -72,7 +72,7 @@
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="#bread">Bread</a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#cakes">Cakes</a>
+                <a class="dropdown-item" href="#cake">Cake</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="#pasta">Pasta</a>
                 <div class="dropdown-divider"></div>
@@ -466,17 +466,18 @@
         </div>
       </section>
       <!--End of product category-->
-      <div class="space" id="cakes"></div>
+      <div class="space" id="cake"></div>
+      <!--The following code was written in collaboration with Iuliia Ustkachkintseva and included with her permission-->
       <!--Product category-->
       <section>
-        <h4 id="category_title">Cakes</h4>
+        <h4 id="category_title">Cake</h4>
         <!--Product card-->
         <div class="product_category">
           <div class="card text-center">
-            <img src="..." class="card-img-top" alt="..." />
+            <img src="..." class="card-img-top" alt="Vanila cheesecake" />
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">example text</p>
+              <h5 class="card-title">Vanilla Cheesecake</h5>
+              <p class="card-text">99p each</p>
               <!--Quantity dropdown box-->
               <label for="quantity">Quantity:</label>
               <select name="quantity" class="quantity">
@@ -487,15 +488,15 @@
                 <option value="5">5</option>
               </select>
               <!--Box ends-->
-              <a class="btn">Go somewhere</a>
+              <a class="btn">Add to cart</a>
             </div>
           </div>
           <!--Product card-->
           <div class="card text-center">
-            <img src="..." class="card-img-top" alt="..." />
+            <img src="..." class="card-img-top" alt="Tiramisu cake" />
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">example text</p>
+              <h5 class="card-title">Tiramisu Cake</h5>
+              <p class="card-text">£1.15 each</p>
               <!--Quantity dropdown box-->
               <label for="quantity">Quantity:</label>
               <select name="quantity" class="quantity">
@@ -506,15 +507,15 @@
                 <option value="5">5</option>
               </select>
               <!--Box ends-->
-              <a class="btn">Go somewhere</a>
+              <a class="btn">Add to cart</a>
             </div>
           </div>
           <!--Product card-->
           <div class="card text-center">
-            <img src="..." class="card-img-top" alt="..." />
+            <img src="..." class="card-img-top" alt="Blueberry cake" />
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">example text</p>
+              <h5 class="card-title">Blueberry Cake</h5>
+              <p class="card-text">£1.30 each</p>
               <!--Quantity dropdown box-->
               <label for="quantity">Quantity:</label>
               <select name="quantity" class="quantity">
@@ -525,15 +526,15 @@
                 <option value="5">5</option>
               </select>
               <!--Box ends-->
-              <a class="btn">Go somewhere</a>
+              <a class="btn">Add to cart</a>
             </div>
           </div>
           <!--Product card-->
           <div class="card text-center">
-            <img src="..." class="card-img-top" alt="..." />
+            <img src="..." class="card-img-top" alt="Strawberry cake" />
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">example text</p>
+              <h5 class="card-title">Strawberry Cake</h5>
+              <p class="card-text">£1.10 each</p>
               <!--Quantity dropdown box-->
               <label for="quantity">Quantity:</label>
               <select name="quantity" class="quantity">
@@ -544,15 +545,15 @@
                 <option value="5">5</option>
               </select>
               <!--Box ends-->
-              <a class="btn">Go somewhere</a>
+              <a class="btn">Add to cart</a>
             </div>
           </div>
           <!--Product card-->
           <div class="card text-center">
-            <img src="..." class="card-img-top" alt="..." />
+            <img src="..." class="card-img-top" alt="Chocolate fudge cake" />
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">example text</p>
+              <h5 class="card-title">Chocolate Fudge Cake</h5>
+              <p class="card-text">£1.15 each</p>
               <!--Quantity dropdown box-->
               <label for="quantity">Quantity:</label>
               <select name="quantity" class="quantity">
@@ -563,7 +564,7 @@
                 <option value="5">5</option>
               </select>
               <!--Box ends-->
-              <a class="btn">Go somewhere</a>
+              <a class="btn">Add to cart</a>
             </div>
           </div>
         </div>
@@ -576,10 +577,10 @@
         <!--Product card-->
         <div class="product_category">
           <div class="card text-center">
-            <img src="..." class="card-img-top" alt="..." />
+            <img src="..." class="card-img-top" alt="Penne pasta" />
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">example text</p>
+              <h5 class="card-title">Penne Pasta</h5>
+              <p class="card-text">75p each</p>
               <!--Quantity dropdown box-->
               <label for="quantity">Quantity:</label>
               <select name="quantity" class="quantity">
@@ -590,15 +591,15 @@
                 <option value="5">5</option>
               </select>
               <!--Box ends-->
-              <a class="btn">Go somewhere</a>
+              <a class="btn">Add to cart</a>
             </div>
           </div>
           <!--Product card-->
           <div class="card text-center">
-            <img src="..." class="card-img-top" alt="..." />
+            <img src="..." class="card-img-top" alt="Fettucine pasta" />
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">example text</p>
+              <h5 class="card-title">Fettucine Pasta</h5>
+              <p class="card-text">75p each</p>
               <!--Quantity dropdown box-->
               <label for="quantity">Quantity:</label>
               <select name="quantity" class="quantity">
@@ -609,15 +610,15 @@
                 <option value="5">5</option>
               </select>
               <!--Box ends-->
-              <a class="btn">Go somewhere</a>
+              <a class="btn">Add to cart</a>
             </div>
           </div>
           <!--Product card-->
           <div class="card text-center">
-            <img src="..." class="card-img-top" alt="..." />
+            <img src="..." class="card-img-top" alt="Rigatoni pasta" />
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">example text</p>
+              <h5 class="card-title">Rigatoni Pasta</h5>
+              <p class="card-text">£1 each</p>
               <!--Quantity dropdown box-->
               <label for="quantity">Quantity:</label>
               <select name="quantity" class="quantity">
@@ -628,15 +629,15 @@
                 <option value="5">5</option>
               </select>
               <!--Box ends-->
-              <a class="btn">Go somewhere</a>
+              <a class="btn">Add to cart</a>
             </div>
           </div>
           <!--Product card-->
           <div class="card text-center">
-            <img src="..." class="card-img-top" alt="..." />
+            <img src="..." class="card-img-top" alt="Spaghetti pasta" />
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">example text</p>
+              <h5 class="card-title">Spaghetti Pasta</h5>
+              <p class="card-text">70p each</p>
               <!--Quantity dropdown box-->
               <label for="quantity">Quantity:</label>
               <select name="quantity" class="quantity">
@@ -647,15 +648,15 @@
                 <option value="5">5</option>
               </select>
               <!--Box ends-->
-              <a class="btn">Go somewhere</a>
+              <a class="btn">Add to cart</a>
             </div>
           </div>
           <!--Product card-->
           <div class="card text-center">
-            <img src="..." class="card-img-top" alt="..." />
+            <img src="..." class="card-img-top" alt="Farfalle pasta" />
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">example text</p>
+              <h5 class="card-title">Farfalle Pasta</h5>
+              <p class="card-text">75p each</p>
               <!--Quantity dropdown box-->
               <label for="quantity">Quantity:</label>
               <select name="quantity" class="quantity">
@@ -666,7 +667,7 @@
                 <option value="5">5</option>
               </select>
               <!--Box ends-->
-              <a class="btn">Go somewhere</a>
+              <a class="btn">Add to cart</a>
             </div>
           </div>
         </div>
@@ -679,10 +680,10 @@
         <!--Product card-->
         <div class="product_category">
           <div class="card text-center">
-            <img src="..." class="card-img-top" alt="..." />
+            <img src="..." class="card-img-top" alt="Brie cheese" />
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">example text</p>
+              <h5 class="card-title">Brie Cheese</h5>
+              <p class="card-text">£3.00 per 200g</p>
               <!--Quantity dropdown box-->
               <label for="quantity">Quantity:</label>
               <select name="quantity" class="quantity">
@@ -693,15 +694,15 @@
                 <option value="5">5</option>
               </select>
               <!--Box ends-->
-              <a class="btn">Go somewhere</a>
+              <a class="btn">Add to cart</a>
             </div>
           </div>
           <!--Product card-->
           <div class="card text-center">
-            <img src="..." class="card-img-top" alt="..." />
+            <img src="..." class="card-img-top" alt="Mozzarella cheese" />
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">example text</p>
+              <h5 class="card-title">Mozzarella Cheese</h5>
+              <p class="card-text">£2.15 for 250g</p>
               <!--Quantity dropdown box-->
               <label for="quantity">Quantity:</label>
               <select name="quantity" class="quantity">
@@ -712,15 +713,15 @@
                 <option value="5">5</option>
               </select>
               <!--Box ends-->
-              <a class="btn">Go somewhere</a>
+              <a class="btn">Add to cart</a>
             </div>
           </div>
           <!--Product card-->
           <div class="card text-center">
-            <img src="..." class="card-img-top" alt="..." />
+            <img src="..." class="card-img-top" alt="Stilton cheese" />
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">example text</p>
+              <h5 class="card-title">Stilton Cheese</h5>
+              <p class="card-text">£4.05 for 250g</p>
               <!--Quantity dropdown box-->
               <label for="quantity">Quantity:</label>
               <select name="quantity" class="quantity">
@@ -731,15 +732,19 @@
                 <option value="5">5</option>
               </select>
               <!--Box ends-->
-              <a class="btn">Go somewhere</a>
+              <a class="btn">Add to cart</a>
             </div>
           </div>
           <!--Product card-->
           <div class="card text-center">
-            <img src="..." class="card-img-top" alt="..." />
+            <img
+              src="img\shop_page\cheese-parmesan.jpg"
+              class="card-img-top"
+              alt="Parmesan cheese"
+            />
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">example text</p>
+              <h5 class="card-title">Parmesan Cheese</h5>
+              <p class="card-text">£3 per 150g</p>
               <!--Quantity dropdown box-->
               <label for="quantity">Quantity:</label>
               <select name="quantity" class="quantity">
@@ -750,15 +755,15 @@
                 <option value="5">5</option>
               </select>
               <!--Box ends-->
-              <a class="btn">Go somewhere</a>
+              <a class="btn">Add to cart</a>
             </div>
           </div>
           <!--Product card-->
           <div class="card text-center">
-            <img src="..." class="card-img-top" alt="..." />
+            <img src="..." class="card-img-top" alt="Ricotta cheese" />
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">example text</p>
+              <h5 class="card-title">Ricotta Cheese</h5>
+              <p class="card-text">50p each</p>
               <!--Quantity dropdown box-->
               <label for="quantity">Quantity:</label>
               <select name="quantity" class="quantity">
@@ -769,15 +774,16 @@
                 <option value="5">5</option>
               </select>
               <!--Box ends-->
-              <a class="btn">Go somewhere</a>
+              <a class="btn">Add to cart</a>
             </div>
           </div>
         </div>
       </section>
       <!--End of product category-->
+      <!--End of code written in collaboration with Iuliia Ustkachkintseva-->
     </div>
     <!--End of products-->
-    <!--Social media links-->
+    <!--Social media links:-->
     <footer id="landing_footer">
       <div id="social_media">
         <a href="https://twitter.com/?lang=en-gb"
@@ -791,7 +797,7 @@
         ></a>
       </div>
     </footer>
-    <!--Bootstrap JavaScript link-->
+    <!--Bootstrap JavaScript link:-->
     <script
       src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
