--- a/register.html
+++ b/register.html
@@ -74,7 +74,7 @@
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="shop.html#bread">Bread</a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="shop.html#cakes">Cakes</a>
+                <a class="dropdown-item" href="shop.html#cake">Cake</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="shop.html#pasta">Pasta</a>
                 <div class="dropdown-divider"></div>
